Added div tags, a header, footer, main, body and unorganized lists

--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Sam Ascencio</title> <!-- Title of your website; shows up in the browser tab and search results -->
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <!-- The head element contains meta-information about the document -->
 </head>
-
+  <div> 
+  <header>
+    <!-- Header of the document; typically contains the main navigation and branding -->
+    <h1>My Website</h1>
+    <hr>  <!-- hr adds a line-->
+    <!-- The main title or logo of the website -->
+    <nav>
+    <!-- Navigation bar for the website -->
+    <ul>
+        <!-- Unordered list used to create navigation links -->
+        <li><a href="#home">Home</a></li>
+        <!-- In HTML, the #home in the href attribute of an <a> tag refers to an anchor link. It means that when this link is clicked, the page will scroll to the element with the id of home. This is typically used for creating in-page navigation, where clicking the link takes you to a specific section of the same page, rather than to a different page. For example, if there's a part of the webpage marked with <div id="home">...</div>, clicking the "Home" link will scroll the page to this section. -->
+        <li><a href="#about">About</a></li>
+        <!-- List item containing a link to the 'about' section of the page -->
+        <li><a href="#services">Services</a></li>
+        <!-- List item containing a link to the 'services' section of the page -->
+        <li><a href="#contact">Contact</a></li>
+        <!-- List item containing a link to the 'contact' section of the page -->
+    </ul>
+    </nav>
+  </header>
+  </div>
+  <hr> <!-- hr adds a line-->
 <body>
-  Hello world
-  <script src="script.js"></script>
-</body>
-
+  <div>
+  <main>
+    <!-- Main content of your website -->
+    <p>Hello world this is located in the main section. </p>
+    <!-- Other main content goes here -->
+  </main>
+    </div>
+  <hr>
+  <div>
+<Footer> 
+  <nav> 
+  <ul>
+    <li> This website was created while I was at dae </li>
+    <li> This is located in the footer tag </li> 
+  </ul>
+</nav>
+</Footer>
+    </div>
+  </body>
 </html>
