Added a gif in the header
added an little walking gif! with the <img> tag which is self closing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <header>
     <!-- Header of the document; typically contains the main navigation and branding -->
     <h1>My Website</h1>
+    <img src="haunterwalk.gif">
     <hr>  <!-- hr adds a line-->
     <!-- The main title or logo of the website -->
     <nav>
