added the <code> tag

--- a/index.html
+++ b/index.html
@@ -40,13 +40,22 @@
   <main>
     <!-- Main content of your website -->
     <p>Hello world this is located in the main section. </p>
+    <section>
+    <h1> About </h1>
+    <p> stuff about me goes here so I can practice section tags</p>
+      </section>
     <!--This creates a button with an alert pop up -->
     <! -- Button with 'type' and 'onclick' attributes - ->
     <button type="button" onclick="alert( 'Hi, you clicked me didnt you ew')"> Click me to get an alert pop up </button>
     <input type="text" id="name" name="user name">
     <input type="date" id="date">
-   <p> Do you like pokemon? </p> <input type="checkbox" id="checkbox">
+   <p> Do you like <code> &lt;pokemon&gt; </code> </p> <input type="checkbox" id="checkbox">
     <input type="color">
+    <!--Code Tag Example -->
+    
+    <p>Here is an example of a <code>&lt;div&gt;</code> tag in HTML.</p>
+
+
     <!-- Other main content goes here -->
   </main>
     </div>
@@ -60,8 +69,9 @@
     <li>  <a href="mailto:jjcmx.samascencio@gmail.com">Email Me</a></li>
   </ul>
 </nav>
+  <cite> Kay taught me all I know about html</cite>
+  <cite> Blumer, H. (1969). Symbolic interactionism: Perspective and method. University of California Press. Retrieved from https://edisciplinas.usp.br/pluginfile.php/2747599/mod_folder/content/0/COMPLEMENTAR%20-%201969%20-%20Blumer%20-%20Symbolic%20Interactionism.pdf </cite>
 </Footer>
-
     </div>
   </body>
 </html>
